# EquilibriumSolver

./: CMakeLists.txt  LICENSE  README.md
data/: gibbs_entalpy.json  molecules.json
include/core/: constants.hpp  input.hpp  parse_utils.hpp  types.hpp  utils.hpp
include/numerics/: solver.hpp
include/thermo/: models.hpp  statSum.hpp
samples/: CO_mixture.json  NO_mixture.json
src/core/: input.cpp  main.cpp  parse_utils.cpp  utils.cpp
src/numerics/: solver.cpp
src/thermo/: models.cpp  statSum.cpp
